@@ -60,7 +60,14 @@ static void build_group_cb(struct parse_callback_data* pcd)
 		if( strstr(pcd->entry_name, ".xml") && strstr(pcd->entry_name, "listxml.xml") == NULL && strstr(pcd->entry_name, "_listsoftware.xml") == NULL )
 		{
 			printf("%s\n", pcd->entry_name);
-			xmlDocPtr doc = xmlReadFile(pcd->fullname, "UTF-8", 0);
+			xmlDocPtr doc;
+			{
+				char* filecontent = NULL;
+				read_file(pcd->fullname, &filecontent);
+				filter_unprintable(filecontent, strlen(filecontent));
+				doc = xmlReadMemory(filecontent, strlen(filecontent), NULL, "UTF-8", 0);
+				free(filecontent);
+			}
 			if( doc ) {
 				struct build_group_cb_data* bg_cb_data = (struct build_group_cb_data*)pcd->user_data;
 				struct group_data** gd_list = bg_cb_data->gd_list;
@@ -379,7 +386,14 @@ static int create_report_from_filename(const char *const filename, struct report
 		default:
 		case 0:
 		{
-			xmlDocPtr doc = xmlReadFile(filename, "UTF-8", 0);
+			xmlDocPtr doc;
+			{
+				char* filecontent = NULL;
+				read_file(filename, &filecontent);
+				filter_unprintable(filecontent, strlen(filecontent));
+				doc = xmlReadMemory(filecontent, strlen(filecontent), NULL, "UTF-8", 0);
+				free(filecontent);
+			}
 			if( doc ) {
 				xmlNodePtr output_node = doc->children;				
 				PREPARE_KEYS(output_node)
