@@ -603,8 +603,11 @@
 	- added filter check to only try to run compatible -listsoftware entries
 	- added detection of duplicated ramsize entries
 	- do not remove the valgrind output with "store_output" set to 2 (again)
+	- added filter_unprintable() to common.c/.h
+	- filter unprintable characters before writing to XML
 	
 	create_report
 	- pass the file descriptor as parameter to PRINT_INFO
 	- improved layout of comparison report
 	- removed option "ignore_exitcode_4" and always filter the mandatory device messages
+	- filter unprintable characters from input XMLs
